examples/negative/silent_contract/import_cycle/a.kai
# Silent contract (#520 audit, category 5 / modules): module
# `a` imports `b`, module `b` imports `a` (see
# `import_cycle/b.kai`). kaikai's loader does not detect or
# reject the cycle; it succeeds (both modules end up loaded)
# and the program compiles. A robust module system should
# either reject cycles outright or admit them by design and
# document the order.

import b

pub fn a_fn() : Int = b_fn()
